# OpenCV

ColorPicking/: CMakeLists.txt  HSVCalculator.cpp  RGB2HSV.cpp  main.cpp  trial.cpp
OpenCVCourse1/: main.cpp
OpenCVCourse2/: CMakeLists.txt  Chapter2.cpp  Chapter3.cpp  Chapter5.cpp  Chapter6.cpp  Chapter7.cpp  ColorPicker.cpp  Project1.cpp  Project3.cpp  main.cpp
TemplateMatching/ChessMatcher/: CMakeLists.txt  bg.jpg~  main.cpp
